--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -209,6 +209,10 @@ views:
           - entity: light.bookshelf_color
             name: Book shelf 1
             type: custom:slider-entity-row
+
+          - entity: light.hue_color_candle_1_5
+            name: Book shelf 3
+            type: custom:slider-entity-row
           - entity: light.hue_color_candle_1_2
             name: Living room sofa right
             type: custom:slider-entity-row
@@ -221,7 +225,7 @@ views:
           - input_select.livingroom
           - script.moodlight
           - scene.livingroom_normal
-          - entity: input_number.v_rum
+
       - id: b24d2e7bd44443a1b8d4f582cea98cba  # Automatically created id
         type: entities
         title: Kitchen
@@ -260,7 +264,6 @@ views:
             name: Hallway hanger
             type: custom:slider-entity-row
           - light.onoff_plug_1
-          - entity: input_number.hall_lamp_bright
       - id: df80d52919e645f68a28825978e3fc20  # Automatically created id
         type: entities
         title: Bedroom
@@ -272,7 +275,6 @@ views:
           - entity: light.bedroom_light
             name: Bedroom wall
             type: custom:slider-entity-row
-          - entity: input_number.bedroom_lamp_bright
       - id: 479ee6b3072943c0bf7d56fa22b69f6c  # Automatically created id
         type: entities
         title: Guest room
@@ -290,7 +292,6 @@ views:
           - entity: light.hue_color_candle_1_3
             name: Guest room window
             type: custom:slider-entity-row
-          - entity: input_number.guest_lamp_bright
           
           
   - id: 3  # Automatically created id
@@ -311,6 +312,9 @@ views:
           - entity: light.bookshelf_color
             name: Book shelf 1
             type: custom:slider-entity-row
+          - entity: light.hue_color_candle_1_5
+            name: Book shelf 3
+            type: custom:slider-entity-row
           - entity: light.hue_color_candle_1_2
             name: Living room sofa right
             type: custom:slider-entity-row
@@ -323,7 +327,6 @@ views:
           - input_select.livingroom
           - script.moodlight
           - scene.livingroom_normal
-          - entity: input_number.v_rum
       - id: e0805c4bdc0c484fa53489293978a6c0  # Automatically created id
         type: entities
         title: Living room
@@ -1011,26 +1014,123 @@ views:
       - id: 5afcfe36397d4bc48f22063ca95ae6f2  # Automatically created id
         type: picture-elements
         image: /local/images/casa_del_kville34.png
-        aspect_ratio: 100%
+#        aspect_ratio: 100%
         elements:
-          - type: service-button
+          - type: state-icon
+            tap_action: 
+              action: toggle
+            entity: switch.guests_present
+            style:
+              top: 30%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.cg_present
+            style:
+              top: 33%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.lt_present
+            style:
+              top: 36%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.home
+            style:
+              top: 39%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.xmas
+            style:
+              top: 42%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.halloween
+            style:
+              top: 45%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+
+          - type: state-icon
+            tap_action: 
+              action: call-service
+              service: light.turn_off
+              service_data:
+              entity_id: group.all_actual_switches
+            title: Switches Off
+            entity: switch.all_switches
+            style:
+              top: 13%
+              left: 60%
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+
+          - type: state-icon
+            tap_action: 
+              action: call-service
+              service: light.turn_off
+              service_data:
+              entity_id: group.all_actual_lights
             title: Lights Off
+            entity: switch.all_lights
             style:
               top: 16%
               left: 60%
-              padding: 0px
-            service: light.turn_off
-            service_data:
-              entity_id: group.all_lights
-          - type: service-button
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+
+          - type: state-icon
+            tap_action: 
+              action: call-service
             title: Livingroom normal
-            style:
-              top: 19%
-              left: 63%
-              padding: 0px
+            entity: switch.living_room_normal
             service: scene.turn_on
             service_data:
-              entity_id: scene.livingroom_normal
+            entity_id: scene.livingroom_normal
+            style:
+              top: 19%
+              left: 60%
+              padding: 0px
           - type: state-label
             entity: sensor.date
             style:
@@ -1050,7 +1150,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:floor-lamp
             entity: light.hue_color_lamp_1
             style:
@@ -1060,7 +1161,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:ceiling-light
             entity: light.hue_ambiance_lamp_1
             style:
@@ -1070,7 +1172,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:ceiling-lamp
             entity: light.hue_ambiance_lamp_1_2
             style:
@@ -1080,7 +1183,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:ceiling-lamp
             entity: light.hue_ambiance_lamp_1_3
             style:
@@ -1090,7 +1194,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-on
             entity: light.onoff_plug_1
             style:
@@ -1100,7 +1205,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.bedroom_light
             style:
@@ -1110,7 +1216,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.hue_color_candle_1_4
             style:
@@ -1121,7 +1228,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1132,7 +1240,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1143,7 +1252,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1154,7 +1264,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1165,7 +1276,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1176,7 +1288,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1187,7 +1300,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1198,7 +1312,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1209,7 +1324,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1220,7 +1336,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1231,7 +1348,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:led-strip
             entity: switch.twinkly
             style:
@@ -1242,7 +1360,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.hue_color_candle_1_2
             style:
@@ -1253,7 +1372,8 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.hue_go_1
             style:
@@ -1264,17 +1384,19 @@ views:
               drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:spotlight-beam
             entity: light.bookshelf_color
             style:
               top: 50%
-              left: 46%
+              left: 48%
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:spotlight-beam
             entity: light.book_shelf_color_two
             style:
@@ -1283,8 +1405,22 @@ views:
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
+
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
+            icon: mdi:spotlight-beam
+            entity: light.hue_color_candle_1_5
+            style:
+              top: 50%
+              left: 46%
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
+
+          - type: state-icon
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.living_room_window_light
             style:
@@ -1310,7 +1446,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:lamp
             entity: light.hue_color_candle_1
             style:
@@ -1320,7 +1457,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:ceiling-lamp
             entity: light.hue_color_lamp_1_2
             style:
@@ -1330,7 +1468,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:track-light
             entity: light.kitchen_sink
             style:
@@ -1340,7 +1479,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:track-light
             entity: light.kitchen_sink_two
             style:
@@ -1350,7 +1490,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:fan
             entity: light.kitchen_fan
             style:
@@ -1360,7 +1501,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.kaffe
             style:
@@ -1370,7 +1512,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.onoff_plug_2
             style:
@@ -1381,7 +1524,8 @@ views:
               drop-shadow(0px 0px 10px black)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.onoff_plug_3
             style:
@@ -1392,7 +1536,8 @@ views:
               drop-shadow(0px 0px 10px black)
 
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.living_room_right_sofa
             style:
@@ -1402,7 +1547,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px black)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.kitchen_window
             style:
@@ -1412,7 +1558,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px black)
           - type: state-icon
-            tap_action: toggle
+            tap_action:  
+              action: toggle
             icon: mdi:power-socket-eu
             entity: light.bedroom_window_light
             style:
@@ -1422,7 +1569,8 @@ views:
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px black)
           - type: state-icon
-            tap_action: toggle
+            tap_action:   
+              action: toggle
             icon: mdi:lava-lamp
             entity: light.hue_color_candle_1_3
             style:
@@ -1570,3 +1718,4 @@ views:
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
+
