--- a/automations.yaml
+++ b/automations.yaml
@@ -25,6 +25,11 @@
 #                                     #
 #######################################
 
+
+#  - service: scene.turn_on
+#    data:
+#     entity_id: scene.all_off
+
 - alias: 'xmas to on'
   initial_state: 'on'
   trigger:
@@ -79,6 +84,23 @@
   - service: switch.turn_on
     data: 
       entity_id: switch.party
+  - service: scene.turn_on
+    data:
+     entity_id: scene.party
+     
+- alias: 'party to on2'
+  initial_state: 'on'
+  trigger:
+  - platform: state
+    entity_id: switch.party
+    to: 'on'
+  action:
+  - service: input_boolean.turn_on
+    data: 
+      entity_id: input_boolean.party
+  - service: scene.turn_on
+    data:
+     entity_id: scene.party
 
 - alias: 'party to off'
   initial_state: 'on'
@@ -91,13 +113,62 @@
     data: 
       entity_id: switch.party
 
+- alias: 'party to off2'
+  initial_state: 'on'
+  trigger:
+  - platform: state
+    entity_id: switch.party
+    to: 'off'
+  action:
+  - service: input_boolean.turn_off
+    data: 
+      entity_id: input_boolean.party
+
 #######################################
 #                                     #
 #       System                        #
 #                                     #
 #######################################
 
+- alias: 'Low Battery CG Phone'
+  initial_state: 'on'
+  trigger:
+    - platform: numeric_state
+      entity_id: sensor.phone_battery
+      below: 25
+  condition:
+    - condition: state
+      entity_id: input_select.house_mode
+      state: 'Home'
+    - condition: time
+      after: '07:00'
+      before: '22:00'
+    - condition: state
+      entity_id: sensor.phone_battery9
+      state: 'false'
+  action:
+  - service: script.turn_on
+    entity_id: script.cg_phone
 
+- alias: 'Low Battery LT Phone'
+  initial_state: 'on'
+  trigger:
+    - platform: numeric_state
+      entity_id: sensor.phone_battery2
+      below: 25
+  condition:
+    - condition: state
+      entity_id: input_select.house_mode
+      state: 'Home'
+    - condition: time
+      after: '07:00'
+      before: '22:00'
+    - condition: state
+      entity_id: sensor.phone_battery3
+      state: 'false'
+  action:
+  - service: script.turn_on
+    entity_id: script.lt_phone
 
 #- alias: Update notifications
 #  initial_state: 'on'
@@ -335,6 +406,8 @@
     entity_id: sun.sun
     value_template: '{{ states.attributes.elevation }}'
     below: 4.0  
+  - condition: time
+    before: '21:45'
   action:
   - service: automation.turn_on
     entity_id: automation.window_lightning
@@ -354,6 +427,11 @@
     - condition: sun 
       after: sunset 
       after_offset: "-00:30:00"
+    - condition: state
+      entity_id: switch.party
+      state: 'off'
+    - condition: time
+      before: '21:45'
   action:
   - service: script.turn_on
     entity_id: 
@@ -379,6 +457,11 @@
   - condition: state
     entity_id: input_select.house_mode
     state: 'Home'
+  - condition: state
+    entity_id: switch.party
+    state: 'off'
+  - condition: time
+    before: '21:45'
   action:
   - service: script.turn_on
     entity_id: 
@@ -400,6 +483,11 @@
     - condition: state
       entity_id: input_select.house_mode
       state: 'Home'
+    - condition: state
+      entity_id: switch.party
+      state: 'off'
+    - condition: time
+      before: '21:45'
   action:
     - service: script.turn_on
       entity_id: 
@@ -420,6 +508,11 @@
     - condition: state
       entity_id: input_select.house_mode
       state: 'Home'
+    - condition: state
+      entity_id: switch.party
+      state: 'off'
+    - condition: time
+      before: '21:45'
   action:
     - service: script.turn_on
       entity_id: 
@@ -441,6 +534,11 @@
     - condition: state
       entity_id: input_select.house_mode
       state: 'Home'
+    - condition: state
+      entity_id: switch.party
+      state: 'off'
+    - condition: time
+      before: '21:45'
   action:
     - service: script.turn_on
       entity_id: 
@@ -462,6 +560,11 @@
     - condition: state
       entity_id: input_select.house_mode
       state: 'Home'
+    - condition: state
+      entity_id: switch.party
+      state: 'off'
+    - condition: time
+      before: '21:45'
   action:
     - service: script.turn_on
       entity_id: 
@@ -472,6 +575,19 @@
 #       Belysning                     #
 #                                     #
 #######################################
+
+- alias: Set Front Lights Color
+  trigger:
+    platform: state
+    entity_id: input_select.livingroom
+  condition:
+    condition: template
+    value_template: "{{ states('input_select.livingroom') != 'Normal' }}"
+  action:
+    service: light.turn_on
+    data_template:
+      entity_id: group.livingroom_lights
+      color_name: "{{ states.input_select.livingroom.state }}"
 
 - alias: 'Reset after power failure'
   initial_state: 'on'
@@ -485,22 +601,16 @@
     - condition: state
       entity_id: input_select.house_mode
       state: 'Away'
-    - condition: state
-      entity_id: input_select.house_mode
-      state: 'Night'
-    - condition: time
-      after: '22:00'
-      before: '07:00'
   action:
-    - service: light.turn_on
-      data: 
-        entity_id: light.bedroom_light, light.bedroom_window_light, light.book_shelf_color_two, light.bookshelf_color, light.guest_room_1, light.guest_room_2, light.guest_room_3, light.hallway_1, light.hallway_2, light.hallway_3, light.hallway_hanger, light.kitchen_fan, light.kitchen_fan_2, light.kitchen_sink, light.kitchen_sink_two, light.hue_color_candle_1, light.living_room_right_sofa, light.living_room_window_light
-        color_temp: 454
-        brightness: 135
-    - delay:
-        seconds: 1
-    - service: light.turn_off
-      entity_id: light.bedroom_light, light.bedroom_window_light, light.book_shelf_color_two, light.bookshelf_color, light.guest_room_1, light.guest_room_2, light.guest_room_3, light.hallway_1, light.hallway_2, light.hallway_3, light.hallway_hanger, light.kitchen_fan, light.kitchen_fan_2, light.kitchen_sink, light.kitchen_sink_two, light.hue_color_candle_1, light.living_room_right_sofa, light.living_room_window_light, light.onoff_plug_1, light.onoff_plug_2, light.onoff_plug_3, light.onoff_plug_4
+#    - service: light.turn_on
+#      data: 
+#        entity_id: light.bedroom_light, light.bedroom_window_light, light.book_shelf_color_two, light.bookshelf_color, light.guest_room_1, light.guest_room_2, light.guest_room_3, light.hallway_1, light.hallway_2, light.hallway_3, light.hallway_hanger, light.kitchen_fan, light.kitchen_fan_2, light.kitchen_sink, light.kitchen_sink_two, light.hue_color_candle_1, light.living_room_right_sofa, light.living_room_window_light
+#        color_temp: 454
+#        brightness: 135
+#    - delay:
+#        seconds: 1
+#    - service: light.turn_off
+#      entity_id: light.bedroom_light, light.bedroom_window_light, light.book_shelf_color_two, light.bookshelf_color, light.guest_room_1, light.guest_room_2, light.guest_room_3, light.hallway_1, light.hallway_2, light.hallway_3, light.hallway_hanger, light.kitchen_fan, light.kitchen_fan_2, light.kitchen_sink, light.kitchen_sink_two, light.hue_color_candle_1, light.living_room_right_sofa, light.living_room_window_light, light.onoff_plug_1, light.onoff_plug_2, light.onoff_plug_3, light.onoff_plug_4
     - service: notify.push
       data_template:
         title: 'Power failure'
@@ -511,8 +621,6 @@
   - seconds: /1200
     platform: time
   condition:
-  - after: sunset
-    condition: sun
   - condition: state
     entity_id: switch.party
     state: 'on'
@@ -821,6 +929,9 @@
   condition:
   - condition: state
     entity_id: switch.party
+    state: 'off'
+  - condition: state
+    entity_id: light.living_room_window_light
     state: 'off'
   action:
     - service: light.turn_on
